<resources>
    <string name="app_name">glSatellite Demo</string>
    <string name="settings">Settings</string>
    <string name="format_std">FPS: %1$2.2f DT: %2$tF TLE: %3$s</string>
    <string name="format_fail">Downloading failed for %1$s</string>
    <string name="format_default">FPS: %1$2.2f Offline Iridium TLE</string>
    <string name="format_info">%1$s LAT: %2$f LON: %3$f ALT: %4$f</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_db">Satellites</string>
    <string name="pref_url_title">TLE fetch URL</string>

    <string name="pref_title_db_special"><b><u>SPECIAL INTEREST</u></b></string>
    <string name="title_tle_new">Last 30 Days Launches</string>
    <string name="title_stations">Space Stations</string>
    <string name="title_visual">100 (or so) Brightest</string>
    <string name="title_1999_025">FENGYUN 1C Debris</string>
    <string name="title_iridium_33_debris">IRIDIUM 33 Debris</string>
    <string name="title_cosmos_2251_debris">COSMOS 2251 Debris</string>
    <string name="title_2012_044">BREEZE&#8211;M R/B Breakup (2012&#8211;044C)</string>

    <string name="pref_title_db_earth"><b><u>WEATHER &amp; EARTH RESOURCES</u></b></string>
    <string name="title_weather">Weather</string>
    <string name="title_noaa">NOAA</string>
    <string name="title_goes">GOES</string>
    <string name="title_resource">Earth Resources</string>
    <string name="title_sarsat">Search &amp; Rescue (SARSAT)</string>
    <string name="title_dmc">Disaster Monitoring</string>
    <string name="title_tdrss">Tracking and Data Relay Satellite System (TDRSS)</string>
    <string name="title_argos">ARGOS Data Collection System</string>

    <string name="pref_title_db_comm"><b><u>COMMUNICATIONS</u></b></string>
    <string name="title_geo">Geostationary</string>
    <string name="title_intelsat">Intelsat</string>
    <string name="title_gorizont">Gorizont</string>
    <string name="title_raduga">Raduga</string>
    <string name="title_molniya">Molniya</string>
    <string name="title_iridium">Iridium</string>
    <string name="title_orbcomm">Orbcomm</string>
    <string name="title_globalstar">Globalstar</string>
    <string name="title_amateur">Amateur Radio</string>
    <string name="title_x_comm">Experimental</string>
    <string name="title_other_comm">Other</string>

    <string name="pref_title_db_nav"><b><u>NAVIGATION</u></b></string>
    <string name="title_gps_ops">GPS Operational</string>
    <string name="title_glo_ops">Glonass Operational</string>
    <string name="title_galileo">Galileo</string>
    <string name="title_beidou">Beidou</string>
    <string name="title_sbas">Satellite-Based Augmentation System (WAAS/EGNOS/MSAS)</string>
    <string name="title_nnss">Navy Navigation Satellite System (NNSS)</string>
    <string name="title_musson">Russian LEO Navigation</string>

    <string name="pref_title_db_sci"><b><u>SCIENTIFIC</u></b></string>
    <string name="title_science">Space &amp; Earth Science</string>
    <string name="title_geodetic">Geodetic</string>
    <string name="title_engineering">Engineering</string>
    <string name="title_education">Education</string>

    <string name="pref_title_db_misc"><b><u>MISCELLANEOUS</u></b></string>
    <string name="title_military">Miscellaneous Military</string>
    <string name="title_radar">Radar Calibration</string>
    <string name="title_cubesats">CubeSats</string>
    <string name="title_other">Other</string>

</resources>
